QA: Fix slight text jump when animating text (home hero)

--- a/scss/templates/home/hero.scss
+++ b/scss/templates/home/hero.scss
@@ -80,7 +80,7 @@
     .word {
       display: inline-block;
       min-width: 3em;
-      min-height: 1em;
+      min-height: 0.9em;
       color: $tertiary;
     }
   }
